src/style.css
/* ... */
.category-tile.category-science:active {
  background: linear-gradient(135deg, shade(#8ff0a4, .95) 0%, shade(#1c71d8, .95) 100%);
}

.category-tile.category-system {
  background: linear-gradient(135deg, #6c757d 0%, #495057 100%);
}
.category-tile.category-system:hover {
  background: linear-gradient(135deg, shade(#6c757d, 1.15) 0%, shade(#495057, 1.15) 100%);
}
.category-tile.category-system:active {
  background: linear-gradient(135deg, shade(#6c757d, .95) 0%, shade(#495057, .95) 100%);
}

.category-tile.category-utility {
  color: #ee5f50;
  text-shadow: 0 1px rgba(255, 255, 255, 0.35);
  background: linear-gradient(135deg, #f6f5f4 0%, #deddda 100%);
}
.category-tile.category-utility:hover {
  background: linear-gradient(135deg, shade(#f6f5f4, 1.08) 0%, shade(#deddda, 1.08) 100%);
}
.category-tile.category-utility:active {
  background: linear-gradient(135deg, shade(#f6f5f4, .95) 0%, shade(#deddda, .95) 100%);
}

.category-tile.category-adwaita {
  text-shadow: 0 1px rgba(255, 255, 255, 0.35);
  background: linear-gradient(45deg, #1c71d8 0%, #57e289 100%);
}
.category-tile.category-adwaita:hover {
  background: linear-gradient(45deg, shade(#1c71d8, 1.08) 0%, shade(#57e289, 1.08) 100%);
}
.category-tile.category-adwaita:active {
  background: linear-gradient(45deg, shade(#1c71d8, .95) 0%, shade(#57e289, .95) 100%);
}

.category-tile.category-kde {
  text-shadow: 0 1px rgba(255, 255, 255, 0.35);
  background: linear-gradient(135deg, #3584e4 0%, #704dac 100%);
}
.category-tile.category-kde:hover {
  background: linear-gradient(135deg, shade(#3584e4, 1.08) 0%, shade(#704dac, 1.08) 100%);
}
.category-tile.category-kde:active {
  background: linear-gradient(135deg, shade(#3584e4, .95) 0%, shade(#704dac, .95) 100%);
}

.category-tile.category-adwaita image,
.category-tile.category-kde image {
	-gtk-icon-shadow: none;
}

.installed-list-view > * {
    padding: 0;
    transition: background-color 200ms;
    	min-height: 0;
    margin: 5px 4.5px;
}

.installed-section {
  padding-top: 0;
}

.narrow .installed-list-view > * {
    margin: 4px 4.5px;
}

.no-vertical-margin > row.hidden {
    margin-top: 0px;
    margin-bottom: 0px;
}

.no-vertical-margin > row:not(.hidden) {
  margin-bottom: 6px;
}

.user-data-list-view > * {
  margin: 0;
}

.user-data-list-view row {
	min-height: 0;
}

.no-min-height {
  min-height: 0;
}

.transaction-tile-title {
  font-size: 1.05em;
  font-weight: 450;
}

.operations {
	background-color: rgba(255, 255, 255, 0.040);
	border-radius: 0px 0px 12px 12px;
}

@media (prefers-color-scheme: light) {
	.operations {
		background-color: rgba(0, 0, 0, 0.050);
	}
}

.ops-toggle {
	transition: transform 200ms ease;
	transform: rotate(90deg);
}

.ops-toggle:checked,
.ops-toggle.rotated {
	transform: rotate(270deg);
}

.update-list {
	background-color: alpha(@card_bg_color, 0.8);
	border-radius: 0 0 12px 12px;
}

.update-list > row {
    padding: 0;
}

.update-toggle {
	border-radius: 12px;
	box-shadow: none;
	transition: border-bottom-left-radius 150ms ease,
	            border-bottom-right-radius 150ms ease;
}
.update-toggle.activated {
	border-bottom-left-radius: 0px;
	border-bottom-right-radius: 0px;
}

.update-card {
  border-radius: 12px;
	box-shadow: 0 0 0 1px rgba(0,0,6,0.03), 0 1px 3px 1px rgba(0,0,6,0.07), 0 2px 6px 2px rgba(0,0,6,0.03);
}

@media (prefers-color-scheme: dark) {
  separator {
	  opacity: 0.5;
  }
}

.disable-adw-flow-box-styling {
    background-color: transparent;
    box-shadow: none;
}

curated-list-view,
curated-list-view list {
  background: var(--bg-color);
}

